Fixed overflow on non-webkit browsers

--- a/wp-content/themes/antilope/resources/sass/style.scss
+++ b/wp-content/themes/antilope/resources/sass/style.scss
@@ -27,6 +27,7 @@
 }
 
 html {
+	overflow-x: hidden;
 	overflow: overlay; // scrollbars overlay on webkit
 }
 body {
